--- a/docs/styles.css
+++ b/docs/styles.css
@@ -9,6 +9,12 @@ body, html{
 .blue{color:blue}
 .red{color:firebrick}
 
+.error{background-color:#FF9494;}
+
+.tb-small{
+    width: 4em;
+}
+
 h1, h2, h3, h4, p{
     margin:0px;
     padding: 0.2em 0;
