--- a/docs/styles.css
+++ b/docs/styles.css
@@ -6,6 +6,10 @@ body, html{
     background-image: linear-gradient(#34b1eb, #b6d1db);
 }
 
+.subscript *{
+    font-size: small;
+}
+
 .blue{color:blue}
 .red{color:firebrick}
 
